<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LNQ</string>
    <string name="google_maps_key">AIzaSyCyhZpRSrMODwfz_JgpiaoDA1akbOpE4e8</string>
    <string name="google_maps_server_key">AIzaSyD-lkEkcFvZAHA2lo0aLd1ahGafMFt3KA8</string>
    <string name="clientID">608133543978-oe04rltasbmmfhtlucpr36lpqp7dbmqu.apps.googleusercontent.com</string>
    <string name="clientSecret">c2x_wln8iy2JY-3vbORNlpWQ</string>
    <string name="default_notification_channel_id">Lnq_CH_01</string>
    <string name="lnq_logo">LNQ Logo</string>
    <string name="facebook_app_id">1280846008974082</string>
    <string name="fb_login_protocol_scheme">fb1280846008974082</string>
    <string name="skip">Skip</string>
    <string name="what_lnq_is">What the LNQ app is</string>
    <string name="what_is_lnq">What is LNQ</string>
    <string name="welcome_to_lnq">Welcome to the LNQ Community</string>
    <string name="existing_features">Exciting Features</string>
    <string name="in_app_examples">In-App Examples</string>
    <string name="circle_dots">Circle Dots</string>
    <string name="tutorial_image">Tutorial Images</string>
    <string name="what_lnq_can_do">What LNQ can do for you</string>
    <string name="example_lnq">Example use of LNQ</string>
    <string name="community_guidlines">Community Guidelines</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account?&#160;&#160;<u>Sign in</u></string>
    <string name="wifi_internet_not_connected">Wifi or Internet is not Connected.</string>
    <string name="email_empty">Please enter an email address.</string>
    <string name="password_empty">Please enter the password.</string>
    <string name="invalid_email">Please enter a valid email address.</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="re_enter_your_password">Please enter the confirm password.</string>
    <string name="password_did_not_matched">Passwords did not matched.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lnq">LNQ</string>
    <string name="export_contact_description">Where you want to Export your contacts ?</string>
    <string name="join_lnq_community">Join the LNQ community</string>
    <string name="sign_in_your_account">Sign into your account</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="finger_print">Sign In with finger print and Face</string>
    <string name="face_detection">Sign In with face detection</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?&#160;&#160;<u>Join the community</u></string>
    <string name="don_t_have_an_account_signup1">Don\'t have an account?</string>
    <string name="don_t_have_an_account_signup2">&#160;&#160;<u>Join the community</u></string>
    <string name="personal_profiles_only">Personal Profiles Only</string>
    <string name="by_signing_up_you_accept_the">By signing up you accept the</string>
    <string name="terms_of_services"><u>Terms of Services</u></string>
    <string name="and">\u0020and\u0020</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="enter_your_email_address_and_we_will_send_you_a_link_to_reset_your_password">Enter your email address and we will send you a link to reset your password.</string>
    <string name="send_email">Send Email</string>
    <string name="resend_email">ReSend Email</string>
    <string name="first_name_signup">First Name</string>
    <string name="last_name_signup">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="nick_name_optional">Nickname (optional)</string>
    <string name="phone_number_signup">Phone Number</string>
    <string name="empty_first_name">Please enter your first name.</string>
    <string name="empty_all_fields">Please fill in missing fields</string>
    <string name="empty_last_name">Please enter your last name.</string>
    <string name="empty_phone_number">Please enter your phone number.</string>
    <string name="forgot_email_des">Enter your information and we\'ll send you a link to reset your email</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="lorem_ipsum_description">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum1">Lorem ipsum</string>
    <string name="privacy">Privacy</string>
    <string name="terms_des">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing </string>
    <string name="privacy_des">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="ok">OK</string>
    <string name="okay">OKay</string>
    <string name="got_it">Got it</string>
    <string name="phone_verification_des">Welcome! Now we need to verify your identity before showing you who\'s around you</string>
    <string name="enter_phone_number">Enter Your Phone No</string>
    <string name="phone_verification_des1">We will send you a 6 digit verification code.</string>
    <string name="phone_verification_des2">Please enter the code on the following screen.</string>
    <string name="send_code">Send Code</string>
    <string name="invalid_phone_number">Please enter valid phone number.</string>
    <string name="not_send_invite">You can not send invite to yourself.</string>
    <string name="verify_phone_number">Verify your phone number</string>
    <string name="verify_code_for_email">Verify your email and reset password</string>
    <string name="enter_six_digit_code">Enter 6 digit code just send you</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_code">Re-Send Code</string>
    <string name="number_already_verified">Your number is verified you will be redirected to next step.</string>
    <string name="code_sent">Verification code successfully sent.</string>
    <string name="invalid_code">You entered wrong code.</string>
    <string name="enter_verification_code">Please enter code first.</string>
    <string name="verification_code_resent">Verification code re-sent</string>
    <string name="create_profile">Create Profile</string>
    <string name="create_profile_des">Finish filling out your profile and make\nany edit you would like.</string>
    <string name="user_a">User A</string>
    <string name="profile_req_des">To maintain the integrity of our community.\nLNQ requires every profile to have a profile\nphoto.</string>
    <string name="profile_req_des2">To use LNQ please either upload a photo from\nyour camera roll or take a selfie now.</string>
    <string name="take_a_selfie">Take a Selfie</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="verified_profile">Verified Profile</string>
    <string name="lorem_ipsum">Lorem ipsum dolar sit amet, consectetur adipiscing elit. Nam rutrum vitae sem ut mollis.</string>
    <string name="phone_contacts">Phone contacts</string>
    <string name="salesfore">SalesForce</string>
    <string name="export_to_csv">Export as CSV</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="apply">Apply</string>
    <string name="favorites">Favorites</string>
    <string name="pending_lnqs">Pending LNQs</string>
    <string name="outstanding_tasks">Outstanding Tasks</string>
    <string name="sort_by">Sort by</string>
    <string name="show_only">Show only</string>
    <string name="reset">Reset</string>
    <string name="distance">Distance</string>
    <string name="cancel">Cancel</string>
</resources>