<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteNewTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhiteNewTheme"
            android:clickable="true"
            android:focusable="true"
            tools:context="lnq.com.lnq.fragments.onboardtutorials.introduction.FragmentTutorialTwo">

            <ImageView
                android:id="@+id/imageViewTutorialTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_370sdp"
                android:contentDescription="@string/tutorial_image"
                android:scaleType="fitXY"
                android:src="@mipmap/bg2_tutorial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTutorialTwoHeading"
                style="@style/textViewTitleNewTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/existing_features"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTutorialTwo" />

            <TextView
                android:id="@+id/textViewTutorialTwoDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewTutorialTwoHeading"
                app:layout_constraintTop_toBottomOf="@+id/textViewTutorialTwoHeading" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>